df12/src/objects/DesignWorkItem__c.object
<CustomObject>
    <fields>
        <fullName>DesignCost__c</fullName>
        <label>Design Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DocumentationHours__c</fullName>
        <label>Documentation Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequirementGatheringHours__c</fullName>
        <label>Requirement Gathering Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkOrder__c</fullName>
        <label>Work Order</label>
        <referenceTo>WorkOrder__c</referenceTo>
        <relationshipLabel>Design Work Items</relationshipLabel>
        <relationshipName>DesignWorkItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Design Work Item</label>
    <nameField>
        <label>Design Work Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Design Work Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>